// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicButton when using different sizes renders a default button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--default BasicButton--size-default BasicButton--align-center"
    id="button-default"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different sizes renders a full-width button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--default BasicButton--size-full-width BasicButton--align-center"
    id="button-full-width"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different sizes renders a mini button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--default BasicButton--size-mini BasicButton--align-center"
    id="button-mini"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different sizes renders a small button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--default BasicButton--size-small BasicButton--align-center"
    id="button-small"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different text alignments renders a center button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--default BasicButton--size-default BasicButton--align-center"
    id="button-center"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different text alignments renders a left button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--default BasicButton--size-default BasicButton--align-left"
    id="button-left"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different text alignments renders a right button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--default BasicButton--size-default BasicButton--align-right"
    id="button-right"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different variants renders a default button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--default BasicButton--size-default BasicButton--align-center"
    id="button-default"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different variants renders a destructive button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--destructive BasicButton--size-default BasicButton--align-center"
    id="button-destructive"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different variants renders a ghost button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--ghost BasicButton--size-default BasicButton--align-center"
    id="button-ghost"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different variants renders a secondary button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--secondary BasicButton--size-default BasicButton--align-center"
    id="button-secondary"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using different variants renders a tertiary button 1`] = `
<div>
  <button
    class="BasicButton BasicButton--tertiary BasicButton--size-default BasicButton--align-center"
    id="button-tertiary"
    type="button"
  >
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using icons when button with type default has a leading icon renders the icon 1`] = `
<div>
  <button
    class="BasicButton BasicButton--default BasicButton--size-default BasicButton--align-center"
    id="button-default"
    type="button"
  >
    <span
      class="leadingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using icons when button with type default has a trailing icon renders the icon 1`] = `
<div>
  <button
    class="BasicButton BasicButton--default BasicButton--size-default BasicButton--align-center"
    id="button-default"
    type="button"
  >
    Click Me
    <span
      class="trailingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </button>
</div>
`;

exports[`BasicButton when using icons when button with type destructive has a leading icon renders the icon 1`] = `
<div>
  <button
    class="BasicButton BasicButton--destructive BasicButton--size-default BasicButton--align-center"
    id="button-destructive"
    type="button"
  >
    <span
      class="leadingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using icons when button with type destructive has a trailing icon renders the icon 1`] = `
<div>
  <button
    class="BasicButton BasicButton--destructive BasicButton--size-default BasicButton--align-center"
    id="button-destructive"
    type="button"
  >
    Click Me
    <span
      class="trailingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </button>
</div>
`;

exports[`BasicButton when using icons when button with type ghost has a leading icon renders the icon 1`] = `
<div>
  <button
    class="BasicButton BasicButton--ghost BasicButton--size-default BasicButton--align-center"
    id="button-ghost"
    type="button"
  >
    <span
      class="leadingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using icons when button with type ghost has a trailing icon renders the icon 1`] = `
<div>
  <button
    class="BasicButton BasicButton--ghost BasicButton--size-default BasicButton--align-center"
    id="button-ghost"
    type="button"
  >
    Click Me
    <span
      class="trailingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </button>
</div>
`;

exports[`BasicButton when using icons when button with type secondary has a leading icon renders the icon 1`] = `
<div>
  <button
    class="BasicButton BasicButton--secondary BasicButton--size-default BasicButton--align-center"
    id="button-secondary"
    type="button"
  >
    <span
      class="leadingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using icons when button with type secondary has a trailing icon renders the icon 1`] = `
<div>
  <button
    class="BasicButton BasicButton--secondary BasicButton--size-default BasicButton--align-center"
    id="button-secondary"
    type="button"
  >
    Click Me
    <span
      class="trailingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </button>
</div>
`;

exports[`BasicButton when using icons when button with type tertiary has a leading icon renders the icon 1`] = `
<div>
  <button
    class="BasicButton BasicButton--tertiary BasicButton--size-default BasicButton--align-center"
    id="button-tertiary"
    type="button"
  >
    <span
      class="leadingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
    Click Me
  </button>
</div>
`;

exports[`BasicButton when using icons when button with type tertiary has a trailing icon renders the icon 1`] = `
<div>
  <button
    class="BasicButton BasicButton--tertiary BasicButton--size-default BasicButton--align-center"
    id="button-tertiary"
    type="button"
  >
    Click Me
    <span
      class="trailingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </button>
</div>
`;
